# shupo

./: .gitignore  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: q2zf0wfsa81aif05xqgmbydbbf4kr9kn-source  si9vxv2xmxx8xmkzhfvvxn65bfi2d4mz-source
services/ingest/: go.mod  go.sum  server.go
services/ingest/cmd/: main.go
services/ingest/internal/config/: config.go
services/ingest/internal/queue/: producer.go
services/ingest/internal/server/: errors.go  handler.go  middleware.go  ratelimit.go  ratelimit.lua  server.go
services/ingest/internal/storage/: storage.go
services/ingest/ratelimit/: ratelimit.go
services/ingest/upload/: handler.go  producer.go
services/rateLimit/: go.mod  rateLimit.go  rateLimit.lua
services/worker/: Cargo.toml
services/worker/src/: config.rs  ffmpeg.rs  lib.rs  main.rs  reclaim.rs  shutdown.rs  state.rs  storage.rs  worker.rs
